<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/fragment_vertical_padding"
    android:paddingLeft="@dimen/fragment_horizontal_padding"
    android:paddingRight="@dimen/fragment_horizontal_padding"
    android:paddingTop="@dimen/fragment_vertical_padding" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/storage_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_management_internal_storatge_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/internal_storage_space_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_internal_storage_space" />

                <TextView
                    android:id="@+id/local_storage_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_calculating" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/total_storage_space_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_total_storage_space" />

                <TextView
                	android:id="@+id/total_storage_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_calculating" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/available_storage_space_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_available_storage_space" />

                <TextView
                    android:id="@+id/available_storage_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_management_section_item_calculating" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@android:drawable/sym_def_app_icon" />
   
</RelativeLayout>