<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_bkg" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activate_cloud_storage_horizontal_margin"
        android:paddingRight="@dimen/activate_cloud_storage_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/activate_cloud_storage_logo_horizontal_margin"
            android:layout_marginRight="@dimen/activate_cloud_storage_logo_horizontal_margin"
            android:src="@drawable/icon_terafonn_logo_l_login" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_gray_border"
            android:hint="@string/activate_cloud_storage_username"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_gray_border"
            android:hint="@string/activate_cloud_storage_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/activate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/activate_cloud_storage_activate_textview_padding"
                android:text="@string/activate_cloud_storage_activate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:text="@string/activate_cloud_storage_forget_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="0.45" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/activate_cloud_storage_or" />

            <View
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="0.45" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_gray_border"
            android:clickable="true">

            <TextView
                android:id="@+id/google_activate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/activate_cloud_storage_google_activate"
                android:textColor="@color/colorAccent"                 />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>